# ndGPUInfo

./: CMakeLists.txt
exe/: CMakeLists.txt  ndGPUInfo.cpp
lib/: CMakeLists.txt  ndAMDGPU.cpp  ndAMDGPU.h  ndGPUInfo.cpp  ndGPUInfo.h  ndNVGPU.h
